fix line breaks in comments

--- a/index.css
+++ b/index.css
@@ -181,7 +181,9 @@ td {
 }
 
 .comment {
+  line-height: 1.5em;
   word-wrap: break-word;
+  white-space: pre;
   max-height: 30em;
   margin: 0px;
 }
